# Keyboard

./: .gitignore  CMakeLists.txt  README.md  README.txt
contrib/ImTui/src/: imtui-impl-ncurses.cpp
src/: build_meta.hpp  main.cpp  pch.hpp
src/data/midi/: chords.cpp  chords.hpp  gm.cpp  gm.hpp
src/hal/: hal.hpp  hal_midi.hpp
src/hal/midi/: midi.hpp  midi_alsa.hpp  midi_coreaudio.hpp  midi_winmidi2.hpp  midi_winmm.hpp  midi_winrt.hpp
